--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noImplicitAny": false,
     "outDir": "./dist/",
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "target": "es5",
   },
