--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
