--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sample",
   "version": "1.0.0",
   "description": "Exemplo para aplicações React que integraram o novo ambiente integrado para cliente ConectCar.",
+  "license": "MIT",
   "scripts": {
     "start": "webpack serve --config config/webpack.dev.config.js --hot --history-api-fallback --env PLATFORM='local' --env VERSION='stag'",
     "build": "webpack --config config/webpack.prod.config.js --progress --env PLATFORM='production' --env VERSION='stag'",
@@ -63,7 +64,6 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
-    "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
