--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7",
     "react": "17",
     "react-dom": "17",
     "react-redux": "^7.2.2",
@@ -70,6 +71,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.4",
     "redux-devtools": "^3.7.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.1"
   }
 }
