Ajuste para realizar deploy

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,7 @@
-starwarsapi='https://swapi.dev/api/'
+STARWARS_API='https://swapi.dev/api/'
+API_KEY=AIzaSyDnQV6VXgRR0MKPWSPYV1gaBSUpY6ECKc0
+AUTH_DOMAIN=react-sample-49efc.firebaseapp.com
+PROJECT_ID=react-sample-49efc
+STORAGE_BUCKET=react-sample-49efc.appspot.com
+MESSAGING_SENDER_ID=1073495568404
+APP_ID=1:1073495568404:web:10ad18d731e08121a23701
