--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2",
@@ -63,6 +63,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
+    "firebase": "^8.2.4",
     "react": "17",
     "react-dom": "17",
     "react-redux": "^7.2.2",
