--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           name: Run Tests
           command: yarn test
 
-      - store-test-results:
+      - store_test_results:
           path: ./
 
   build:
