--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,8 @@ jobs:
   deploy:
     executor: docker-executor
     steps:
+      - build
+
       - run:
           name: Firebase Deploy
           command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
@@ -69,7 +71,6 @@ workflows:
           type: approval
           requires:
             - build
-            - test
 
       - deploy:
           requires:
