--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,9 +65,9 @@ workflows:
     jobs:
       - test
 
-      - build
-        requires:
-          - test
+      - build:
+          requires:
+            - test
   
       - deploy:
           requires:
