--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
