--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   coveralls: coveralls/coveralls@1.0.6
+  envsubst: sawadashota/envsubst@1.1.0
 
 jobs:
   build:
@@ -32,9 +33,10 @@ jobs:
 
       - coveralls/upload
 
-
       - store_test_results:
           path: ./junit.xml
+
+      - envsubst/install
   
       - run:
           name: Build App
