--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,14 @@ orbs:
   coveralls: coveralls/coveralls@1.0.6
   envsubst: sawadashota/envsubst@1.1.0
 
+defaults: &defaults
+  working_directory: ~/repo
+  docker:
+    - image: circleci/node:lts
+
 jobs:
   build:
-    docker:
-      - image: circleci/node:lts
-    working_directory: ~/repo
+    <<: *defaults
     steps:
       - checkout
 
@@ -27,6 +30,16 @@ jobs:
           paths:
             - ~/.cache/yarn
 
+      - persist_to_workspace:
+          root: ~/repo
+          paths: .
+
+  test:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo
+
       - run:
           name: Run Tests
           command: yarn test
@@ -34,8 +47,14 @@ jobs:
       - coveralls/upload
 
       - store_test_results:
-          path: junit.xml
-      
+          path: .
+
+  deploy:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo
+
       - envsubst/install
 
       - run:
@@ -49,3 +68,15 @@ jobs:
       - run:
           name: Firebase Deploy
           command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
+
+workflows:
+  version: 2
+  build-test-deploy:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
+      - deploy:
+          requires:
+            - test
