--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "firebase": "^8.2.4",
+    "mask-fn": "^1.0.0",
     "react": "17",
     "react-dom": "17",
     "react-redux": "^7.2.2",
