--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "webpack serve --config config/webpack.dev.config.js --hot --history-api-fallback --env PLATFORM='local' --env VERSION='stag'",
     "build": "webpack --config config/webpack.prod.config.js --progress --env PLATFORM='production' --env VERSION='stag'",
-    "test": "set \"NODE_ICU_DATA=node_modules/full-icu\" && jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura --coverageReporters=lcov",
-    "test:watch": "set \"NODE_ICU_DATA=node_modules/full-icu\" && jest --watch --coverage"
+    "test": "jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura --coverageReporters=lcov",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -21,9 +21,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "awesome-typescript-loader": "^5.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.0",
@@ -38,10 +37,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "firebase-tools": "^9.12.1",
-    "full-icu": "^1.3.4",
     "html-webpack-plugin": "^5.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.0.4",
+    "jest": "27",
     "jest-junit": "^12.1.0",
     "jest-runner-eslint": "^0.10.0",
     "mini-css-extract-plugin": "^1.6.0",
@@ -50,15 +48,16 @@
     "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.3",
-    "ts-jest": "^27.0.2",
-    "typescript": "^4.1.3",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.2",
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.1",
+    "@reduxjs/toolkit": "1.6.0",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "@types/react-redux": "^7.1.15",
@@ -71,7 +70,7 @@
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.4",
+    "redux": "4.1.0",
     "redux-devtools": "^3.7.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0"
