--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@babel/preset-react": "^7.13.13",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
+    "@testing-library/user-event": "12.8.3",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
@@ -39,7 +39,7 @@
     "firebase-tools": "^9.12.1",
     "html-webpack-plugin": "^5.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "27",
+    "jest": "26.6.3",
     "jest-junit": "^12.1.0",
     "jest-runner-eslint": "^0.10.0",
     "mini-css-extract-plugin": "^1.6.0",
@@ -48,7 +48,7 @@
     "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.3",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "26.5.6",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.2",
     "webpack": "^5.38.1",
