--- a/package.json
+++ b/package.json
@@ -6,72 +6,72 @@
     "start": "webpack serve --config config/webpack.dev.config.js --hot --history-api-fallback --env PLATFORM='local' --env VERSION='stag'",
     "build": "webpack --config config/webpack.prod.config.js --progress --env PLATFORM='production' --env VERSION='stag'",
     "test": "jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura --coverageReporters=lcov",
-    "test:watch": "jest --watch --coverage"
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.14.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.4",
     "@babel/plugin-proposal-throw-expressions": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^26.0.20",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-jest": "^26.6.3",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "12.8.3",
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
-    "dotenv-webpack": "^6.0.0",
-    "eslint": "^7.18.0",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.6",
+    "dotenv-webpack": "^7.0.3",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "firebase-tools": "^9.2.2",
-    "html-webpack-plugin": "^4.5.1",
+    "firebase-tools": "^9.12.1",
+    "html-webpack-plugin": "^5.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "jest-junit": "^12.0.0",
-    "mini-css-extract-plugin": "^1.3.4",
-    "node-sass": "^5.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "sass-loader": "^10.1.1",
+    "jest": "26.6.3",
+    "jest-junit": "^12.1.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "node-sass": "^6.0.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.0",
+    "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.1.1",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3",
-    "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1",
+    "terser-webpack-plugin": "^5.1.3",
+    "ts-jest": "26.5.6",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.2",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@reduxjs/toolkit": "1.6.0",
+    "@types/react": "^17.0.8",
+    "@types/react-dom": "^17.0.5",
     "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
-    "@types/styled-components": "^5.1.7",
-    "firebase": "^8.2.4",
+    "@types/styled-components": "^5.1.9",
+    "firebase": "^8.6.5",
     "mask-fn": "^1.0.0",
-    "react": "17",
-    "react-dom": "17",
-    "react-redux": "^7.2.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.4",
+    "redux": "4.1.0",
     "redux-devtools": "^3.7.0",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.3.0"
   }
 }
