--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
-    "@testing-library/user-event": "13.5.0",
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
@@ -45,7 +44,7 @@
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
-    "ts-jest": "26.5.6",
+    "ts-jest": "^26.5.6",
     "ts-loader": "^9.2.7",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0",
@@ -55,8 +54,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.8.0",
+    "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-redux": "^7.1.23",
