feat: adicionado node_sample

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 STARWARS_API=https://swapi.dev/api/
+NODESAMPLE_API=http://localhost:3000/api/
 API_KEY=$API_KEY
 AUTH_DOMAIN=$AUTH_DOMAIN
 PROJECT_ID=$PROJECT_ID
