--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-testing-library": "^5.5.1",
     "eslint-webpack-plugin": "^3.1.1",
+    "favicons": "^7.0.0-beta.4",
+    "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
     "firebase-tools": "^11.0.1",
     "html-webpack-plugin": "^5.5.0",
