--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --config config/webpack.prod.config.js --progress --env PLATFORM='production' --env VERSION='stag'",
     "test": "jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura --coverageReporters=lcov",
     "test:watch": "jest --watch",
-    "emulators:start": "firebase emulators:start --only auth,firestore,storage,ui"
+    "emulator": "firebase emulators:start --only auth,firestore,storage,ui"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
