--- a/package.json
+++ b/package.json
@@ -2,30 +2,18 @@
   "name": "sample",
   "version": "1.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.config.js --hot --history-api-fallback --env PLATFORM='local' --env VERSION='stag'",
-    "build": "webpack --config config/webpack.prod.config.js --progress --env PLATFORM='production' --env VERSION='stag'",
+    "start": "vite",
+    "build": "vite build",
     "test": "jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura --coverageReporters=lcov",
     "test:watch": "jest --watch",
     "emulator": "firebase emulators:start --only auth,firestore,storage,ui"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
-    "@babel/plugin-proposal-throw-expressions": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.19.1",
-    "@babel/preset-env": "^7.19.3",
-    "@babel/preset-react": "^7.18.6",
     "@types/jest": "^29.1.1",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
+    "@vitejs/plugin-react": "^2.2.0",
     "babel-jest": "^29.1.2",
-    "babel-loader": "^8.2.5",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-better-styled-components": "^1.1.2",
@@ -35,30 +23,18 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.7.1",
-    "eslint-webpack-plugin": "^3.2.0",
-    "favicons": "6.2.2",
-    "favicons-webpack-plugin": "^5.0.2",
-    "file-loader": "^6.2.0",
     "firebase-tools": "^11.13.0",
-    "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "jest-junit": "^14.0.1",
     "jest-transform-stub": "^2.0.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "node-sass": "^7.0.3",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.6",
+    "sass": "^1.56.1",
     "ts-jest": "^29.0.3",
-    "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
-    "webpack-merge": "^5.8.0"
+    "vite": "^3.2.4",
+    "vite-plugin-favicons-inject": "^2.1.0",
+    "vite-plugin-html": "^3.2.0"
   },
   "dependencies": {
     "@faker-js/faker": "^7.5.0",
