chore: ajuste runInBand

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura --coverageReporters=lcov –runInBand",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura --coverageReporters=lcov",
     "test:watch": "jest --watch",
     "emulator": "firebase emulators:start --only auth,firestore,storage,ui"
   },
