--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,8 @@ jobs:
 
       - store_test_results:
           path: .
+    
+    resource_class: large
 
   deploy:
     <<: *defaults
@@ -67,7 +69,7 @@ jobs:
 
       - run:
           name: Firebase Deploy
-          command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
+          command: ./node_modules/.bin/firebase deploy --only hosting --token "$FIREBASE_TOKEN"
 
 workflows:
   version: 2
