--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
     "@vitejs/plugin-react": "^4.4.0",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9.24.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest-dom": "^5.0.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-testing-library": "^7.1.1",
@@ -39,7 +42,8 @@
     "typescript": "^5.1.3",
     "vite": "^6.2.6",
     "vite-plugin-favicons-inject": "^2.2.0",
-    "vite-plugin-html": "^3.2.0"
+    "vite-plugin-html": "^3.2.0",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
     "@faker-js/faker": "^9.7.0",
